--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Makerlab</h1>
-            <!--<h3>Free Bootstrap Themes &amp; Templates</h3>-->
+            <h2>REPOSITORY</h2>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
