comented unused links

--- a/assets.html
+++ b/assets.html
@@ -75,7 +75,7 @@
                     <h1>UNDER CONSTRUCTION!</h1>
                     <h2>Asset downnloads:</h2>
                     <hr class="small">
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
@@ -96,7 +96,7 @@
                         </div>
 
                                                                                                                       
-                    </div>
+                    </div> -->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
