linked template file to laser

--- a/assets.html
+++ b/assets.html
@@ -38,7 +38,7 @@
 <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="index.html#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="index.html#top" onclick=$("#menu-close").click();>Course heading, Cpt.?</a>
             </li>
             <li>
                 <a href="index.html#top" onclick=$("#menu-close").click();>Home</a>
@@ -67,23 +67,21 @@
     </nav>
 
 
-    <!-- booking calender links -->
+    <!-- Assets download links -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h1>UNDER CONSTRUCTION!</h1>
-                    <h2>Asset downnloads:</h2>
+                    <h1>Asset downnloads:</h1>
+                    <h2>Laser:</h2>
                     <hr class="small">
-                    <!--<div class="row">
+                    <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <p>Lasercut template</p>
-                                </a> 
+                                <li><a href="./assets/TEMPLATE_skabelon.ait.ai">Lasercut template.</a></li>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                     <!-- <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <p>CNC Tools Library</p>
@@ -93,10 +91,10 @@
                                 </a>                                
                             </div>
 
-                        </div>
+                        </div>-->
 
                                                                                                                       
-                    </div> -->
+                    </div> 
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -105,7 +103,42 @@
         <!-- /.container -->
     </section>
 
+    <!-- Assets download links -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>CNC:</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <p></p>
+                                </a> 
+                            </div>
+                        </div>
+                     <!-- <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <p>CNC Tools Library</p>
+                                </a>
+                                <a href="#">
+                                    <p>CNC skabeloner</p>
+                                </a>                                
+                            </div>
 
+                        </div>-->
+
+                                                                                                                      
+                    </div> 
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
 
    
 
