diabled non working 3D printers

--- a/booking.html
+++ b/booking.html
@@ -132,11 +132,11 @@
                             </div>
                         </div>
                         <div class="col-sm-2">
-                            <div class="portfolio-item">
+                           <!-- <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=1USFm7zGmLabhwLwyF1VK3kysb4nWrzNoDd_Ru4aFvNs">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_3Extended.png">
                                 </a>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
@@ -146,11 +146,11 @@
                             </div>
                         </div>
                         <div class="col-sm-2">
-                            <div class="portfolio-item">
+                          <!--  <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=1aQX7Nzm-DEsMqgHXBdww5wtCSSCwAw3JGEpQK0W7U6s">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_2.png">
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
