added machine maintenence

--- a/booking.html
+++ b/booking.html
@@ -137,6 +137,7 @@
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_3Extended.png">
                                 </a>
                             </div>-->
+                            <img class="img-portfolio img-responsive" src="img/maintenence.png">
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
@@ -151,6 +152,7 @@
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_2.png">
                                 </a>
                             </div> -->
+                            <img class="img-portfolio img-responsive" src="img/maintenence.png">
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
