--- a/booking.html
+++ b/booking.html
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="index.html#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="index.html#top" onclick=$("#menu-close").click();>Yes, sir!</a>
             </li>
             <li>
                 <a href="index.html#top" onclick=$("#menu-close").click();>Home</a>
