UM2 Extended is back online

--- a/booking.html
+++ b/booking.html
@@ -132,12 +132,12 @@
                             </div>
                         </div>
                         <div class="col-sm-2">
-                           <!-- <div class="portfolio-item">
+                            <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=1USFm7zGmLabhwLwyF1VK3kysb4nWrzNoDd_Ru4aFvNs">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_3Extended.png">
                                 </a>
-                            </div>-->
-                            <img class="img-portfolio img-responsive" src="img/maintenence.png">
+                            </div>
+                            <!--<img class="img-portfolio img-responsive" src="img/maintenence.png">-->
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
