added feeds and speeds xls link

--- a/assets.html
+++ b/assets.html
@@ -67,7 +67,7 @@
     </nav>
 
 
-    <!-- Assets download links -->
+    <!-- Assets LASERdownload links -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
@@ -78,7 +78,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <li><a href="./assets/TEMPLATE_skabelon.ait.ai">Lasercut template.</a></li>
+                                <p><a href="./assets/TEMPLATE_skabelon.ait.ai">Lasercut template.</a></p>
                             </div>
                         </div>
                      <!-- <div class="col-md-4">
@@ -103,7 +103,7 @@
         <!-- /.container -->
     </section>
 
-    <!-- Assets download links -->
+    <!-- Assets CNC download links -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
@@ -113,8 +113,8 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <p></p>
+                                <a href="https://drive.google.com/open?id=15RT2RQB2GmVAGAr0lesw0e4FVNGxWg4jnV12_Qx0CO8">
+                                    <p>Feeds and Speeds chart</p>
                                 </a> 
                             </div>
                         </div>
