--- a/tutorial.html
+++ b/tutorial.html
@@ -105,6 +105,36 @@
     </section>
 
 
+<section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>3D Printers:</h2>
+                    <hr class="small">
+                    <div class="row">
+                        
+                        <div class="col-sm-2">
+                            <div class="portfolio-item">
+                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDSlp3WDJCX0hoam8">
+                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png"> alphacam
+                                </a>
+                            </div>
+                        </div>
+                         <div class="col-sm-2">
+                            <div class="portfolio-item">
+                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDM3JTRnFSY3VJUFE">
+                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png"> cnc hardware
+                                </a>
+                            </div>
+                        </div>                                                                                                         
+                    </div>
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
 
    
 
