--- a/tutorial.html
+++ b/tutorial.html
@@ -116,14 +116,14 @@
                         <div class="col-sm-2">
                             <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=0B1E85uThEYpDSlp3WDJCX0hoam8">
-                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png"> alphacam
+                                    <img class="img-portfolio img-responsive" src="img/CNC_Software.png">
                                 </a>
                             </div>
                         </div>
                          <div class="col-sm-2">
                             <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=0B1E85uThEYpDM3JTRnFSY3VJUFE">
-                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png"> cnc hardware
+                                    <img class="img-portfolio img-responsive" src="img/CNC_Hardware.png">
                                 </a>
                             </div>
                         </div>                                                                                                         
