--- a/tutorial.html
+++ b/tutorial.html
@@ -74,6 +74,23 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Tutorial links:</h2>
                     <hr class="small">
+                    <div class="row">
+                        
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDSlp3WDJCX0hoam8">
+                                    <img class="img-portfolio img-responsive" src="img/CNC_Software.png">
+                                </a>
+                            </div>
+                        </div>
+                         <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDM3JTRnFSY3VJUFE">
+                                    <img class="img-portfolio img-responsive" src="img/CNC_Machine.png">
+                                </a>
+                            </div>
+                        </div>                                                                                                         
+                    </div>
                    <!-- <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
@@ -103,38 +120,6 @@
         <!-- /.container -->
     </section>
 
-
-<section id="portfolio" class="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <hr class="small">
-                    <div class="row">
-                        
-                        <div class="col-sm-2">
-                            <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDSlp3WDJCX0hoam8">
-                                    <img class="img-portfolio img-responsive" src="img/CNC_Software.png">
-                                </a>
-                            </div>
-                        </div>
-                         <div class="col-sm-2">
-                            <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDM3JTRnFSY3VJUFE">
-                                    <img class="img-portfolio img-responsive" src="img/CNC_Hardware.png">
-                                </a>
-                            </div>
-                        </div>                                                                                                         
-                    </div>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-   
 
     <!-- Footer -->
     <footer>
