All 3D printers are online, folder structure for tutorials

--- a/booking.html
+++ b/booking.html
@@ -147,12 +147,12 @@
                             </div>
                         </div>
                         <div class="col-sm-2">
-                          <!--  <div class="portfolio-item">
+                          <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=1aQX7Nzm-DEsMqgHXBdww5wtCSSCwAw3JGEpQK0W7U6s">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_2.png">
                                 </a>
-                            </div> -->
-                            <img class="img-portfolio img-responsive" src="img/maintenence.png">
+                            </div> 
+                          <!--    <img class="img-portfolio img-responsive" src="img/maintenence.png"> -->
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
