folder structure for tutorial images

--- a/assets.html
+++ b/assets.html
@@ -141,6 +141,42 @@
     </section>
 
    
+    <!-- Assets Textile printer download links -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>Textile Printer:</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="https://drive.google.com/open?id=15RT2RQB2GmVAGAr0lesw0e4FVNGxWg4jnV12_Qx0CO8">
+                                    <p>Phanton colors</p>
+                                </a> 
+                            </div>
+                        </div>
+                     <!-- <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <p>CNC Tools Library</p>
+                                </a>
+                                <a href="#">
+                                    <p>CNC skabeloner</p>
+                                </a>                                
+                            </div>
+
+                        </div>-->
+
+                                                                                                                      
+                    </div> 
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
 
     <!-- Footer -->
     <footer>
