--- a/tutorial.html
+++ b/tutorial.html
@@ -93,7 +93,7 @@
                          <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href=" hello/tutorials/sticker.html ">
-                                    <img class="img-portfolio img-responsive" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRvEjjtgIDJxT0UkHcdJKbgxS2sKydI5ANrLvNUz34QYQrxJzCz1A">
+                                    <img class="img-portfolio img-responsive" src="img/CNC_Machine.png">
                                 </a>
                             </div>
                         </div>                                                                                                         
