--- a/tutorial.html
+++ b/tutorial.html
@@ -92,7 +92,7 @@
                         </div>
                          <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href=" /tutorials/sticker.html ">
+                                <a href=" /tutorials/stickers.md ">
                                     <img class="img-portfolio img-responsive" src="img/CNC_Machine.png">
                                 </a>
                             </div>
