--- a/tutorial.html
+++ b/tutorial.html
@@ -92,7 +92,7 @@
                         </div>
                          <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="/tutorials/VersaSTUDIO%20Sticker%20Printer.html ">
+                                <a href="hello/tutorials/VersaSTUDIO%20Sticker%20Printer.html ">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/sticker-01.png">
                                 </a>
                             </div>
