Added general info link Removed panthone color link

--- a/assets.html
+++ b/assets.html
@@ -66,13 +66,48 @@
         </ul>
     </nav>
 
+    
+     <!-- Assets General links -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h1>Asset downnloads:</h1>
+                    <h2>General:</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <p><a href="https://drive.google.com/open?id=1d38ybIYbLTAXb4uSR-XSx141_umuo1QUc_LyWhuAtZ8 ">Makerlab Safety & info.</a></p>
+                            </div>
+                        </div>
+                     <!-- <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <p>CNC Tools Library</p>
+                                </a>
+                                <a href="#">
+                                    <p>CNC skabeloner</p>
+                                </a>                                
+                            </div>
+
+                        </div>-->
+
+                                                                                                                      
+                    </div> 
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
 
     <!-- Assets LASERdownload links -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h1>Asset downnloads:</h1>
                     <h2>Laser:</h2>
                     <hr class="small">
                     <div class="row">
@@ -149,14 +184,14 @@
                     <h2>Textile Printer:</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-4">
+                        <!--<div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=15RT2RQB2GmVAGAr0lesw0e4FVNGxWg4jnV12_Qx0CO8">
                                     <p>Phanton colors</p>
                                 </a> 
                             </div>
                         </div>
-                     <!-- <div class="col-md-4">
+                      <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <p>CNC Tools Library</p>
