Added Machine specs and saftey page

--- a/assets.html
+++ b/assets.html
@@ -78,20 +78,18 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <p><a href="https://drive.google.com/open?id=1d38ybIYbLTAXb4uSR-XSx141_umuo1QUc_LyWhuAtZ8 ">Makerlab Safety & info.</a></p>
+                                <p><a href="makerlabSaftey.html ">Makerlab Safety & Info.</a></p>
                             </div>
                         </div>
-                     <!-- <div class="col-md-4">
+                      <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <p>CNC Tools Library</p>
-                                </a>
-                                <a href="#">
-                                    <p>CNC skabeloner</p>
-                                </a>                                
+                                <a href="machineSpec.html">
+                                    <p>Machine Specification & File Formats</p>
+                                </a> 
+                                                                
                             </div>
 
-                        </div>-->
+                        </div>
 
                                                                                                                       
                     </div> 
