Textile ENG tutorial low res, links to softwarer downloads

--- a/assets.html
+++ b/assets.html
@@ -182,14 +182,13 @@
                     <h2>Textile Printer:</h2>
                     <hr class="small">
                     <div class="row">
-                        <!--<div class="col-md-4">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=15RT2RQB2GmVAGAr0lesw0e4FVNGxWg4jnV12_Qx0CO8">
-                                    <p>Phanton colors</p>
-                                </a> 
+                                <p><a href="./tutorials/textilePrinter/textilePrinter_Eng.pdf">ENG Tutorial .</a></p>
+                                
                             </div>
                         </div>
-                      <div class="col-md-4">
+                      <!--<div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <p>CNC Tools Library</p>
