added laser material

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <i class="fa fa-cloud-download fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Assets</strong>
+                                    <strong>Info & Assets</strong>
                                 </h4>
                                 <p>Template files and tool library for download.</p>
                                 <br>
