--- a/assets.html
+++ b/assets.html
@@ -118,10 +118,10 @@
                             <div class="portfolio-item">
                                 
                                 <a href="safeLaserCutMaterial.html">
-                                    <p>Safe Laser Cut Material</p>
+                                    <p>Safe Material for Laser Cutter</p>
                                 </a> 
                                 <a href="unsafeLaserCutMaterials.html">
-                                    <p>Unsafe Laser Cut Material</p>
+                                    <p>Unsafe Material for Laser Cutter</p>
                                 </a> 
             
                                 <a href="https://www.ulsinc.com/en-dk/material/materials-library">
