--- a/safeLaserCutMaterial.html
+++ b/safeLaserCutMaterial.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://stackedit.io/res-min/themes/base.css" />
 <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
-<body><div class="container"><h1 id="safe-laser-cutting-materials">Safe Laser Cutting Materials</h1>
+<body><div class="container"><h1 id="safe-laser-cutting-materials">Safe Material for Laser Cutter</h1>
 
 <table>
 <thead>
