ColorTemplate textil priter, high res tutorial Textile printer and changed info tekst

--- a/assets.html
+++ b/assets.html
@@ -193,13 +193,13 @@
                     <h2>Textile Printer:</h2>
                     <hr class="small">
                     <div class="row">
-                       <!-- <div class="col-md-4">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <p><a href="./tutorials/textilePrinter/textilePrinter_Eng.pdf">ENG Tutorial .</a></p>
+                                <p><a href="./assets/allefarverCMYK.tiff">CMYK Color Templat .</a></p>
                                 
                             </div>
                         </div>
-                      <div class="col-md-4">
+                      <!--  <div class="col-md-4">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <p>CNC Tools Library</p>
