small break fix

--- a/makerlabSaftey.html
+++ b/makerlabSaftey.html
@@ -73,7 +73,7 @@
     
 <body><div class="container"><h1 id="makerelab"><strong>MAKERELAB</strong></h1>
 
-<p>Makerlab is a prototyping workshop available to enrolled KEA students, lecturers, researchers or students from our partner institutions in Nordic Entrepreneurship Hubs. To use the workshop students have to <br>
+<p>Makerlab is a prototyping workshop available to enrolled KEA students, lecturers, researchers or students from our partner institutions in Nordic Entrepreneurship Hubs.<br> To use the workshop students have to 
 complete the intro-course held at Makerlab. Later in the semester Makerlab will also arrange machine specific courses where students gets hands on experience with the machines.</p>
 
 <h4 id="opening-time"><strong>OPENING TIME</strong></h4>
