--- a/assets.html
+++ b/assets.html
@@ -162,17 +162,17 @@
                                 </a> 
                             </div>
                         </div>
-                     <!-- <div class="col-md-4">
+                     <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <p>CNC Tools Library</p>
+                                <a href="assets/KEA_Layout_2016R1.xml">
+                                    <p>Alphacam Interface</p>
                                 </a>
-                                <a href="#">
+                               <!-- <a href="#">
                                     <p>CNC skabeloner</p>
-                                </a>                                
+                                </a>-->                                
                             </div>
 
-                        </div>-->
+                        </div>
 
                                                                                                                       
                     </div> 
