Force download xml file

--- a/assets.html
+++ b/assets.html
@@ -164,7 +164,7 @@
                         </div>
                      <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="assets/KEA_Layout_2016R1.xml">
+                                <a href="./assets/KEA_Layout_2016R1.xml" download>
                                     <p>Alphacam Interface</p>
                                 </a>
                                <!-- <a href="#">
@@ -195,7 +195,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <p><a href="./assets/allefarverCMYK.tiff">CMYK Color Templat .</a></p>
+                                <p><a href="./assets/allefarverCMYK.tiff">CMYK Color Templat.</a></p>
                                 
                             </div>
                         </div>
