--- a/booking.html
+++ b/booking.html
@@ -120,14 +120,14 @@
                         <div class="col-sm-2">
                             <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ">
-                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png">
+                                    <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
                                 <a href="https://drive.google.com/open?id=15KEK-DeDcGGvDvNdZTXdEWGWZNpJpmDlVcMXs6DnBWg">
-                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_2.png">
+                                    <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
                         </div>
