All 3D printer bookings in  tabs

--- a/booking.html
+++ b/booking.html
@@ -119,21 +119,21 @@
                         
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ">
+                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=1870025087">
                                     <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=15KEK-DeDcGGvDvNdZTXdEWGWZNpJpmDlVcMXs6DnBWg">
+                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=472642168">
                                     <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=1USFm7zGmLabhwLwyF1VK3kysb4nWrzNoDd_Ru4aFvNs">
+                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=835659104s">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_3Extended.png">
                                 </a>
                             </div>
@@ -141,14 +141,14 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=1lPtRU-M1iNcsf7gWEFFlzxkxF-lvDq6oUbekgXhKB4c">
+                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=633932372">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_1.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                           <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=1aQX7Nzm-DEsMqgHXBdww5wtCSSCwAw3JGEpQK0W7U6s">
+                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=364806900">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_2.png">
                                 </a>
                             </div> 
@@ -156,7 +156,7 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=1Gbu7xVsXgBJasrbWWmsVpHQjgOT2knzads40SqXFaQ4">
+                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=1403056053">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_3Extended.png">
                                 </a>
                             </div>
