--- a/booking.html
+++ b/booking.html
@@ -157,7 +157,7 @@
                         <div class="col-sm-2">
                             <div class="portfolio-item">
                                 <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=1403056053">
-                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_3Extended.png">
+                                    <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
                         </div>                                                                                                                        
