--- a/booking.html
+++ b/booking.html
@@ -128,7 +128,7 @@
                         <div class="col-sm-2">
                             <div class="portfolio-item">
                                 <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=1870025087">
-                                    <img class="img-portfolio img-responsive" src="img/maintenence.png">
+                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png">
                                 </a>
                             </div>
                         </div>
